# nrf52-radio-rs

./: .gitignore  Cargo.toml  README.md  flash-dfu.sh  memory.x
.cargo/: config.toml
src/: lib.rs
src/bsp/: ble.rs
tests/: integration.rs
uf2/: uf2conv.py
