[package]
authors = ["Johannes Sauer"]
name = "nrf52-radio-rs"
edition = "2024"
version = "0.1.0"


# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
# [[bin]]
# name = "nrf52-radio-rs"
# test = false

[[bin]]
name = "bitfield"
path = "src/bin/bitfield.rs"
test = false

[[bin]]
name = "format"
path = "src/bin/format.rs"
test = false

[[bin]]
name = "hello"
path = "src/bin/hello.rs"
test = false

[[bin]]
name = "levels"
path = "src/bin/levels.rs"
test = false

[[bin]]
name = "overflow"
path = "src/bin/overflow.rs"
test = false

[[bin]]
name = "panic"
path = "src/bin/panic.rs"
test = false

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
display-interface = { version = "0.5.0", features = ["defmt-03"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.8.0", features = [
    "nrf52840",
    "gpiote",
    "defmt",
    "time",
    "time-driver-rtc1",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-io = "0.7.1"
nrf-mpsl = { version = "0.3.0", default-features = false }
nrf-sdc = { version = "0.4", default-features = false, features = [
    "defmt",
    "nrf52840",
    "peripheral",
] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"
ssd1306-i2c = "0.1.5"
static_cell = "2"
trouble-host = { version = "0.5.1", features = ["defmt"] }

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c" }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
